[project]
name = "ai-202510-bayesian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "openbb>=4.1.3",
    "openbb-finra>=1.5.0",
    "pydantic>=2.12.2",
    "tdqm>=0.0.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
